--- a/pr-preview/pr-20/datasets.html
+++ b/pr-preview/pr-20/datasets.html
@@ -319,7 +319,7 @@ gtag('config', 'G-4JT42QR6DV', { 'anonymize_ip': true});
 </ul>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="images/excalidraw/datasets_dataset.png" class="img-fluid figure-img" width="1250"></p>
+<p><img src="images/excalidraw/datasets_dataset.png" class="img-fluid figure-img" style="width:100.0%"></p>
 <figcaption>Dataset components</figcaption>
 </figure>
 </div>
@@ -1217,7 +1217,7 @@ AGEP: int8</code></pre>
 <div class="cell-output-display">
 <div data-pagedtable="false">
   <script data-pagedtable-source="" type="application/json">
-{"columns":[{"label":["year"],"name":[1],"type":["int"],"align":["right"]},{"label":["mean_age"],"name":[2],"type":["dbl"],"align":["right"]}],"data":[{"1":"2021","2":"9.562817"},{"1":"2018","2":"12.220912"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":["year"],"name":[1],"type":["int"],"align":["right"]},{"label":["mean_age"],"name":[2],"type":["dbl"],"align":["right"]}],"data":[{"1":"2018","2":"12.220912"},{"1":"2021","2":"9.562817"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
